--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,3 +1,7 @@
+bot:
+  automerge: true
+build_platform:
+  osx_arm64: osx_64
 conda_forge_output_validation: true
 github:
   branch_name: main
@@ -7,3 +11,4 @@ provider:
   linux_ppc64le: default
 conda_build:
   pkg_format: '2'
+test: native_and_emulated
